@@ -41,7 +41,6 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/plotCFvar.py',
                       'progs/plotEISvar.py',
                       'progs/plotEISMINT.py',
-                      'progs/glide_launch.py',
                       'progs/plotSpot.py',
                       'progs/plotProfile.py',
 		      'progs/plotProfileTS.py',
